...
struct PiggyLocalization {
    
    // MARK: - General App Strings
    struct General {
        static let appName = NSLocalizedString("piggy.general.appName", value: "PiggyBong", comment: "App name")
        static let cancel = NSLocalizedString("piggy.general.cancel", value: "Cancel", comment: "Cancel button")
        static let done = NSLocalizedString("piggy.general.done", value: "Done", comment: "Done button")
        static let save = NSLocalizedString("piggy.general.save", value: "Save", comment: "Save button")
        static let delete = NSLocalizedString("piggy.general.delete", value: "Delete", comment: "Delete button")
        static let edit = NSLocalizedString("piggy.general.edit", value: "Edit", comment: "Edit button")
        static let next = NSLocalizedString("piggy.general.next", value: "Next", comment: "Next button")
        static let back = NSLocalizedString("piggy.general.back", value: "Back", comment: "Back button")
        static let close = NSLocalizedString("piggy.general.close", value: "Close", comment: "Close button")
        static let loading = NSLocalizedString("piggy.general.loading", value: "Loading...", comment: "Loading state")
...
